# autolight

./: .gitignore  README.md  pyproject.toml
autolight/: __init__.py  __main__.py  _audioticks.py  _auto_generate.py  _auto_schedule.py  _clips.py  _file_info.py  _generate.py  _helpers.py  _moviepy.py  _parse.py
examples/autogenerate/: auto_file.py  file.py
examples/parse/: file1.py  parsed_file1.py
examples/parse/folder1/: file2.txt
examples/parse/folder1/folder2/: file3.txt
examples/portrait-images/: main.py
examples/skiing/: auto_skiing.py  skiing.py
old_autolight/: __init__.py  _audioticks.py  _auto_generate.py  _helpers.py
